--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ before_install:
   - sudo installer -pkg "MonoFramework-MDK-${MONO_VERSION}.macos10.xamarin.x86.pkg" -target /
 
 script:
-  - xbuild PclUnit.mono.sln
+  - xbuild PclUnit.mono.sln /p:FSharpBad=true
   - WhoTestsTheTesters/Tests/RunTests.Mono.Manually.sh
