--- a/WhoTestsTheTesters/Tests/RunTests.mono.yml
+++ b/WhoTestsTheTesters/Tests/RunTests.mono.yml
@@ -4,6 +4,11 @@ config:
   assemblies:
     - BasicTests\bin\Debug\BasicTests.dll
     - ConstraintsTests\bin\Debug\ConstraintsTests.dll
+    - Style\NunitTests\bin\Debug\NunitTests.dll
+    - Style\XunitTests\bin\Debug\XunitTests.dll
+    - Style\FsUnitTests\bin\Debug\FsUnitTests.dll
+
+
   platforms:
     - id: net40-x86
     - id: net45-x86
