--- a/Runner/Platforms/sl/sl50-xap/packages.config
+++ b/Runner/Platforms/sl/sl50-xap/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.SignalR.Client" version="1.2.1" targetFramework="sl50" />
-  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="sl50" />
+  <package id="Microsoft.AspNet.SignalR.Client" version="2.0.0" targetFramework="sl50" />
+  <package id="Microsoft.Bcl" version="1.0.19" targetFramework="sl50" />
+  <package id="Microsoft.Bcl.Build" version="1.0.4" targetFramework="sl50" />
+  <package id="Microsoft.Net.Http" version="2.1.10" targetFramework="sl50" />
+  <package id="Newtonsoft.Json" version="5.0.1" targetFramework="sl50" />
 </packages>
