--- a/Runner/Platforms/net/net45/packages.net-45-x86-full.config
+++ b/Runner/Platforms/net/net45/packages.net-45-x86-full.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="ManyConsole" version="0.4.2.16" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.Client" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.3" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.13" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.2.18" targetFramework="net45" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
 </packages>
