--- a/Runner/pclunit-runner/packages.config
+++ b/Runner/pclunit-runner/packages.config
@@ -1,17 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ManyConsole" version="0.4.2.16" targetFramework="net40" />
-  <package id="Microsoft.AspNet.SignalR.Core" version="2.0.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.SelfHost" version="2.0.0" targetFramework="net45" />
-  <package id="Microsoft.Owin" version="2.0.0" targetFramework="net45" />
-  <package id="Microsoft.Owin.Diagnostics" version="2.0.0" targetFramework="net45" />
-  <package id="Microsoft.Owin.Host.HttpListener" version="2.0.0" targetFramework="net45" />
-  <package id="Microsoft.Owin.Hosting" version="2.0.0" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security" version="2.0.0" targetFramework="net45" />
-  <package id="Microsoft.Owin.SelfHost" version="2.0.0" targetFramework="net45" />
+  <package id="ManyConsole" version="0.4.2.17" targetFramework="net40" />
+  <package id="Nancy" version="0.22.2" targetFramework="net40" />
+  <package id="Nancy.Hosting.Self" version="0.22.2" targetFramework="net40" />
+  <package id="Nancy.Serialization.JsonNet" version="0.22.2" targetFramework="net40" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="5.0.1" targetFramework="net45" />
-  <package id="Owin" version="1.0" targetFramework="net45" />
-  <package id="YamlDotNet.Core" version="2.0.1" targetFramework="net40" />
-  <package id="YamlDotNet.RepresentationModel" version="2.0.1" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net40" />
+  <package id="YamlDotNet" version="3.1.0" targetFramework="net40" />
 </packages>
