--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ before_install:
 
 script:
   - xbuild PclUnit.mono.sln /p:FSharpBad=true
-  - mono Runner/pclunit-runner/bin/Debug/pclunit-runner.exe runConfig WhoTestsTheTesters/Tests/RunTests.mono.yml -o testresults.json
+  - mono Runner/pclunit-runner/bin/Debug/pclunit-runner.exe runConfig --noerror WhoTestsTheTesters/Tests/RunTests.mono.yml -o testresults.json
   - mono WhoTestsTheTesters/ConventionTestProcessor/bin/Debug/ConventionTestProcessor.exe testresults.json
