--- a/Contrib/PclUnit.Constraints/PclUnit.Constraints.csproj
+++ b/Contrib/PclUnit.Constraints/PclUnit.Constraints.csproj
@@ -32,7 +32,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\..\build\lib\</OutputPath>
     <DefineConstants>TRACE;CLR_4_0</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
