--- a/Runner/Platforms/net/net40/net-40-x64-full.csproj
+++ b/Runner/Platforms/net/net40/net-40-x64-full.csproj
@@ -32,7 +32,7 @@
     <PlatformTarget>x64</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\x64\Release\</OutputPath>
+    <OutputPath>..\..\..\..\build\tools\Platforms\net-40-x64\</OutputPath>
     <DefineConstants>TRACE;NET40 x64</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
