--- a/Runner/Platforms/net/net40/net-40-x86-full.csproj
+++ b/Runner/Platforms/net/net40/net-40-x86-full.csproj
@@ -32,7 +32,7 @@
     <PlatformTarget>x86</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\x86\Release\</OutputPath>
+    <OutputPath>..\..\..\..\build\tools\Platforms\net-40-x86\</OutputPath>
     <DefineConstants>TRACE;NET40</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
