--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,4 +7,7 @@ build_script:
   - "set PATH=%PATH%;C:\\Program Files (x86)\\Microsoft SDKs\\F#\\3.1\\Framework\\v4.0\\"
   - fsi --exec build.fsx Test
 
+artifacts:
+  - path: deploy\build\*.zip
+
 test: off
