--- a/Runner/Platforms/net/net45/net-45-x64-full.csproj
+++ b/Runner/Platforms/net/net45/net-45-x64-full.csproj
@@ -80,6 +80,9 @@
       <Link>Commands\RunSatelliteCommand.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+<Compile Include="..\..\shared\VersionInfo.cs">
+  <Link>Properties\VersionInfo.cs</Link>
+</Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\PclUnit\PclUnit.csproj">
