--- a/Contrib/PclUnit.Constraints/PclUnit.Constraints.csproj
+++ b/Contrib/PclUnit.Constraints/PclUnit.Constraints.csproj
@@ -95,6 +95,7 @@
     <Compile Include="INUnitEqualityComparer.cs" />
     <Compile Include="Is.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\VersionInfo.cs" />
     <Compile Include="TextMessageWriter.cs" />
     <Compile Include="Throws.cs" />
   </ItemGroup>
