--- a/Contrib/PclUnit.Style.Nunit/PclUnit.Style.Nunit.csproj
+++ b/Contrib/PclUnit.Style.Nunit/PclUnit.Style.Nunit.csproj
@@ -55,6 +55,8 @@
     <Compile Include="IgnoreAttribute.cs" />
     <Compile Include="Pieces\Randomizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\VersionInfo.cs" />
+
     <Compile Include="RandomAttribute.cs" />
     <Compile Include="RangeAttribute.cs" />
     <Compile Include="SetUpAttribute.cs" />
