--- a/Runner/Platforms/net/net40/net-40-x64-full.csproj
+++ b/Runner/Platforms/net/net40/net-40-x64-full.csproj
@@ -46,7 +46,6 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.IO"/>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -76,6 +75,9 @@
       <Link>Commands\RunSatelliteCommand.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+<Compile Include="..\..\shared\VersionInfo.cs">
+  <Link>Properties\VersionInfo.cs</Link>
+</Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\PclUnit\PclUnit.csproj">
