--- a/Runner/Platforms/sl/sl50-xap/sl-50-xap.csproj
+++ b/Runner/Platforms/sl/sl50-xap/sl-50-xap.csproj
@@ -86,6 +86,9 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\..\shared\VersionInfo.cs">
+      <Link>Properties\VersionInfo.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
