--- a/Runner/pclunit-runner/pclunit-runner.csproj
+++ b/Runner/pclunit-runner/pclunit-runner.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\VersionInfo.cs" />
     <Compile Include="WebApi.cs" />
     <Compile Include="PlatformResult.cs" />
     <Compile Include="PrintResults.cs" />
