--- a/tools/packages.config
+++ b/tools/packages.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Fake" version="2.12.2" />
+  <package id="FAKE" version="2.12.2" />
   <package id="Octokit" version="0.3.1" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.30" />
   <package id="Microsoft.Net.Http" version="2.2.18" />
