--- a/WhoTestsTheTesters/Tests/RunTests.yml
+++ b/WhoTestsTheTesters/Tests/RunTests.yml
@@ -2,19 +2,19 @@
 ---
 config:
   assemblies:
-    - BasicTests\bin\Debug\BasicTests.dll
-    - ConstraintsTests\bin\Debug\ConstraintsTests.dll
-    - Style\XunitTests\bin\Debug\XunitTests.dll 
-    - Style\NunitTests\bin\Debug\NunitTests.dll
-    - Style\FsUnitTests\bin\Debug\FsUnitTests.dll
+    - BasicTests\bin\%Configuration%\BasicTests.dll
+    - ConstraintsTests\bin\%Configuration%\ConstraintsTests.dll
+    - Style\XunitTests\bin\%Configuration%\XunitTests.dll
+    - Style\NunitTests\bin\%Configuration%\NunitTests.dll
+    - Style\FsUnitTests\bin\%Configuration%\FsUnitTests.dll
   platforms:
     - id: net40-x86
-    - id: net40-x64 
+    - id: net40-x64
     - id: net45-x86
     - id: net45-x64
     - id: sl50-x86
       assemblies:
-        - SilverlightTests\bin\Debug\SilverlightTests.dll
+        - SilverlightTests\bin\%Configuration%\SilverlightTests.dll
     - id: sl50-x64
       assemblies:
-        - SilverlightTests\bin\Debug\SilverlightTests.dll
+        - SilverlightTests\bin\%Configuration%\SilverlightTests.dll
