--- a/PclUnit/PclUnit.csproj
+++ b/PclUnit/PclUnit.csproj
@@ -1,12 +1,26 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.3;net45</TargetFrameworks>
+    <TargetFrameworks>netstandard1.3;net45;portable40-net40+sl5+win8+wp8</TargetFrameworks>
   </PropertyGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)'!='net45'">
+  <PropertyGroup Condition="'$(TargetFramework)'=='portable40-net40+sl5+win8+wp8'">
+     <TargetFrameworkIdentifier>.NETPortable</TargetFrameworkIdentifier>
+     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+     <TargetFrameworkProfile>Profile136</TargetFrameworkProfile>
+     <DefineConstants>$(DefineConstants);PORTABLE136</DefineConstants>
+  </PropertyGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)'=='netstandard1.3'">
     <PackageReference Include="System.Reflection.TypeExtensions" Version="4.3.0" />
     <PackageReference Include="System.Threading.ThreadPool" Version="4.3.0" />
   </ItemGroup>
+
+
+  <ItemGroup Condition="'$(TargetFramework)'=='portable40-net40+sl5+win8+wp8'">
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+  </ItemGroup>
+
 
 </Project>
