--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,13 +1,14 @@
-os: Windows Server 2012
+image: Visual Studio 2017
 
-environment:
-  EnableNuGetPackageRestore: true
+build: off
 
 build_script:
-  - "set PATH=%PATH%;C:\\Program Files (x86)\\Microsoft SDKs\\F#\\3.1\\Framework\\v4.0\\"
-  - fsi --exec build.fsx
+  - cmd: set PATH=%PATH%;C:\Program Files (x86)\Microsoft SDKs\F#\4.1\Framework\v4.0\
+  - cmd: fsi --exec ./build.fsx
+
+test: off
 
 artifacts:
   - path: deploy\build\*.zip
 
-test: off
+skip_branch_with_pr: true
