--- a/Contrib/PclUnit.Style.FsUnit/PclUnit.Style.FsUnit.fsproj
+++ b/Contrib/PclUnit.Style.FsUnit/PclUnit.Style.FsUnit.fsproj
@@ -62,7 +62,7 @@
     <Name>FSharp.Core</Name>
     <AssemblyName>FSharp.Core.dll</AssemblyName>
     <Private>False</Private>
-    <HintPath>..\..\packages\FSharp.Core.Open.FS30.3.1.1.5\lib\portable-net45+sl5+win8\FSharp.Core.dll</HintPath>
+    <HintPath>..\..\packages\FSharp.Core.4.1.17\lib\portable-net45+sl5+netcore45\FSharp.Core.dll</HintPath>
   </Reference>
     </ItemGroup>
  </Otherwise>
